--- a/web/src/pages/webdesktop.astro
+++ b/web/src/pages/webdesktop.astro
@@ -35,9 +35,9 @@ const urls = [
       <nav class="flex flex-col gap-2 m-4">
         {
           urls.map(({ image, alt, url, name }) => (
-            <a href={url} class="flex flex-col items-center w-16">
+            <a href={url} class="flex flex-col items-center w-16 group">
               <img class="size-12" src={image} alt={alt} />
-              <p class="text-xs text-center w-full line-clamp-1 hover:line-clamp-none">
+              <p class="text-xs text-center w-full line-clamp-1 group-hover:line-clamp-none h-4">
                 {name}
               </p>
             </a>
@@ -81,12 +81,10 @@ const urls = [
 
   .desktop {
     background-image: url("/webdesktop/background.jpg");
-    background-size: cover; /* La imagen de fondo se ajusta al tamaño del contenedor */
-    background-position: center; /* La imagen de fondo se centra */
-    height: calc(
-      100% - 65px
-    ); /* Altura menos el espacio de la barra de tareas */
-    padding-bottom: 35px; /* Espacio para la barra de tareas */
+    background-size: cover;
+    background-position: bottom right;
+    height: 100%;
+    padding-bottom: 35px;
   }
 
   .taskbar {
@@ -98,7 +96,7 @@ const urls = [
     align-items: center;
     justify-content: space-between;
     padding: 3px;
-    box-shadow: 0px -1px 10px rgba(0, 0, 0, 0.5); /* Sombra */
+    box-shadow: 0px -1px 10px #00000080;
   }
 
   .taskbar img {
@@ -113,15 +111,14 @@ const urls = [
     left: 0;
     width: 100%;
     height: 1px;
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: #ffffff4d;
   }
 
   #date-time {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 12px;
     font-weight: bold;
-    margin-right: 40px;
-    margin-left: 30px; /* Mover la fecha y hora hacia la izquierda */
-    color: rgb(14, 81, 169); /* Color del texto azul oscuro */
+    margin-right: 16px;
+    color: #0e51a9;
   }
 </style>
