--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Inicio de sesión">
+<Layout title="Inicio de sesión" icon="/webdesktop/webdesktop.ico">
   <div class="login-container">
     <div class="login-box">
       <div class="login-form">
