Update webdesktop.astro to include auth logic and styling changes

--- a/web/src/pages/webdesktop.astro
+++ b/web/src/pages/webdesktop.astro
@@ -35,7 +35,7 @@ const urls = [
 ];
 ---
 
-<Layout title="Webdesktop" icon="/webdesktop/webdesktop.ico">
+<Layout title="Webdesktop" icon="/webdesktop/webdesktop.ico" auth>
   <div class="flex flex-col">
     <section class="desktop grow">
       <nav class="flex flex-col gap-5 m-4">
