Add webdesktop icon

--- a/web/src/pages/clases-impartidas.astro
+++ b/web/src/pages/clases-impartidas.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Clases impartidas" auth>
+<Layout title="Clases impartidas" icon="/webdesktop/webdesktop.ico" auth>
   <section class="content-center grid">
     <h1 class="text-center text-xl font-bold">Clases impartidas</h1>
     <p class="text-center mb-8">
